# object-tracking

./: .gitignore  README.md  producer-consumer.py  run-cmd-in-each-dir.sh  setup_local_dev.sh
PT/: chrome.sh  client.sh  cv2vars.txt  mount-nfs.sh  pt-quick.rb  pt-quicker.pt  pt.rb  requirements.txt  server.sh  ssh_to_pi.sh
PT/player-map/: README.md  package.json
PT/player-map/website/: chrome-osx.sh  chrome.sh  map.html
PT/pt/: common.py  paste_to_interp.py  pt.py  ptclient.py  ptcv.py  ptserver.py  vds.py
PT/pt-website/website/: chrome.sh  open_chrome.sh  start_webserver.sh  stream-example.html  stream-server.js
PT/settings/: .json  bal.json  best1.json  cat.json  fav.json  five.json  hacklab.json  oeau.json  settings.json  test1.json
pt-client/: .gitignore  Gruntfile.js  MANIFEST.in  README.md  package.json  run.sh  run2.sh  setup.cfg  setup.py
pt-client/ptclient/: ptclient.py  ptclient2.py
pt-cookbook/: Gruntfile.js  README.md  package.json
pt-cookbook/files/default/: 99-write-mac-to-usb.rules  save_mac.sh
pt-cookbook/recipes/default/: pt.rb
pt-cv/: .gitignore  Gruntfile.js  README.md  functions-opencv2.py  package.json  requirements.txt  setup.cfg
pt-cv/ptcv/: ptcv.py
pt-transcoder/: run.sh
pt-website/: .gitignore
pt-website/website/: stream.html
