[metadata]
name = ptclient
author = Daniel Snider
author-email = danielsnider12@gmail.com
summary = ptclient
description-file =
    README.md
home-page = https://www.facebook.com/danielsnider
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    ptclient
namespace_packages =
    ptclient

# [entry_points]

[pbr]
warnerrors = true
