[metadata]
name = cvutils
author = Daniel Snider
author-email = danielsnider12@gmail.com
summary = Player Tracking CV Utils
description-file =
    README.md
home-page = https://www.facebook.com/danielsnider
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    cvutils
namespace_packages =
    cvutils

[pbr]
warnerrors = true
